# explodable

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: handoff.md  statusline.sh
.claude/commands/: adr.md
.github/workflows/: test.yml
config/: benchmark_prompts.md  bvcs_rubric_explodable.yaml  editorial_calendar.yaml  kb_schema.sql  relationship_classification_prompt.txt  research_extraction_prompt.txt  test_topics_n50.py  trusted_domains.yaml  voice_profile_explodable.yaml
config/migrations/: 001_rename_domain_add_cultural_domains.sql  002_add_queries_table.sql  003_add_source_document.sql
config/rubrics/: analytical_essay.yaml  python_code_quality.yaml
demo/: app.py  requirements.txt
demo/samples/: T07.md  T14.md  T16.md  T27.md  T33.md  _scores.json
docker/: docker-compose.yml
docs/: architecture.md  code_judge_braintrust_proposal.md  eval-methodology.md  phase0_calibration_result.md  phase1_results.md  positioning.md  taxonomy.md
docs/decisions/: TEMPLATE.md  (+10 more)
scripts/: approve_findings.py  backfill_manifestation_urls.py  check_export_gate.py  compile_read_models.py  import_findings.py  ingest_batch_findings.py  migrate_benchmark_tables.sql  migrate_draft_usage.sql  migrate_source_type_enum.sql  migrate_to_supabase.py  phase2_run_n50.py  phase2_smoke_hybrid.py  phase2_test_graph_expansion.py  score_code.py  score_drafts_and_calibrate.py  setup_read_models.sql  wait-for-docker.sh
tests/: conftest.py  test_citation_processor.py  test_judge.py  test_revision_gate.py  test_topic_router.py
website/: index.html
(+79 files in other folders)
